feat(smithy-java): To(Native/Dafny) for all srv's Op strucs
Where "srv's Op strucs" is
a Service's Operation Structures,
or all of a Service's Operations' Input, Output, Errors
and all shapes related to the above.

We need https://github.com/dafny-lang/dafny/pull/3034
to resolve singular datatype creation
(now known as a "Record Type").

DONE:
- [x] Test Java KMS
- [x] Test Java DDB
- [x] Merge #83 into this

TODO:
- [ ] Test Java DDB again
- [ ] Address Issues raised in PR #82, #92, #83